--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "homepage": "http://ajdev.co/",
   "private": true,
   "dependencies": {
+    "@heroku/buildpack-registry": "^1.0.1",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.3",
