--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "private": true,
   "dependencies": {
     "@heroku/buildpack-registry": "^1.0.1",
+    "@material-ui/core": "^4.11.3",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.3",
+    "fontsource-roboto": "^4.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-hook-form": "^6.15.5",
